welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: illegal start of simple expression
		var vert = true
                ^